<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.JoinCallActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/join_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_enter"
            android:textColor="@color/textbox_secondary" />

        <EditText
            android:id="@+id/join_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Meeting ID"
            android:ems="10"
            android:ellipsize="end"
            android:hint="@string/join_join_hint"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textColorHint="@color/textbox_secondary" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/join_holder"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            android:id="@+id/join_button"
            style="@style/FluentButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/join_start"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
