<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="50"
    android:alpha="1"
    android:backgroundTint="#A6CC3333"
    tools:context=".activities.CallActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previewHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/call_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/participant_header_notification"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/groupCallTable"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/yourCameraHolder"
                android:layout_width="70dp"
                android:layout_height="120dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/call_buttons"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:background="@color/grey200"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewHolder">

        <ImageButton
            android:id="@+id/call_video"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/call_video"
            android:src="@drawable/toggle_selector_camera">

        </ImageButton>

        <ImageButton
            android:id="@+id/call_audio"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/call_audio"
            android:src="@drawable/toggle_selector_mic">

        </ImageButton>

        <ImageButton
            android:id="@+id/call_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/call_share"
            android:src="@drawable/ic_fluent_share_android_24_filled">

        </ImageButton>

        <ImageButton
            android:id="@+id/call_hangup"
            style="@style/FluentButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_filled"
            android:backgroundTint="#A6CC3333"
            android:contentDescription="@string/call_hangup"
            android:src="@drawable/ic_fluent_call_end_28_filled">

        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_hangup_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CC000000"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <Button
            android:id="@+id/call_hangup_confirm"
            style="@style/FluentButton"
            android:layout_width="wrap_content"
            android:minWidth="400dp"
            android:maxWidth="400dp"
            android:layout_height="52dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/button_filled"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/call_hangup_confirm"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/call_hangup_cancel"
            style="@style/FluentButton"
            android:layout_width="wrap_content"
            android:minWidth="400dp"
            android:maxWidth="400dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/button_outlined_grey"
            android:text="@string/call_hangup_cancel"
            android:gravity="center"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
